batch upload to bucket

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,5 @@ CLASSIFIER_PROCESSOR_ID=your-classifier-processor-id
 AADHAR_PROCESSOR_ID=your-aadhar-processor-id
 PAN_PROCESSOR_ID=your-pan-processor-id
 INVOICE_PROCESSOR_ID=your-invoice-processor-id
+GCS_BUCKET_NAME=your-gcs-bucket-name
 # GOOGLE_APPLICATION_CREDENTIALS=./key.json # Keep commented if using 'gcloud auth application-default login'
