document summarize processor integration

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,5 @@ AADHAR_PROCESSOR_ID=your-aadhar-processor-id
 PAN_PROCESSOR_ID=your-pan-processor-id
 INVOICE_PROCESSOR_ID=your-invoice-processor-id
 GCS_BUCKET_NAME=your-gcs-bucket-name
+SUMMARIZER_PROCESSOR_ID = your-summarizer-processor-id
 # GOOGLE_APPLICATION_CREDENTIALS=./key.json # Keep commented if using 'gcloud auth application-default login'
