gcp workflow integration for documents upload

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ INVOICE_PROCESSOR_ID=your-invoice-processor-id
 GCS_BUCKET_NAME=your-gcs-bucket-name
 SUMMARIZER_PROCESSOR_ID = your-summarizer-processor-id
 # GOOGLE_APPLICATION_CREDENTIALS=./key.json # Keep commented if using 'gcloud auth application-default login'
+WORKFLOW_NAME=your_workflow_name
+WORKFLOW_LOCATION=us-central1
