--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google-cloud/documentai": "^9.5.0",
     "@google-cloud/storage": "^7.19.0",
+    "@google-cloud/workflows": "^5.0.0",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
